amm/pool-web/amm-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ckb-amm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-amm-web
spec:
  rules:
  - host: gliaswap.ckbapp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: amm-web-svc
          servicePort: 80
